<?xml version="1.0"?>
<package format="2">
  <name>dlib</name>
  <version>0.0.0</version>
  <description>DLib_catkin</description>
  <maintainer email="avempati@ethz.ch">Anurag Vempati</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
</package>
